<resources>
    <string name="app_name">Note App</string>
    <string name="all">All</string>
    <string name="HomeStuff">Home</string>
    <string name="work">Work</string>
    <string name="title">Title</string>
    <string name="write_the_note_here">Write the note here</string>
    <string name="category">Category</string>
    <string name="take_note">Never forget anything again, take notes</string>
    <string-array name="catgory">
        <item>All</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>