<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fef5d8"
    android:layoutDirection="ltr"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".NoteActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/t"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fde295"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:titleMargin="10dp"
        app:titleTextColor="#1875d1"
        app:menu="@menu/main_menu"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_note"
                android:layout_margin="15dp">

                <AutoCompleteTextView
                    android:id="@+id/listCatgory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="@string/category" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/eidttext_shape"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/write_the_note_here"
            android:background="@drawable/eidttext_shape"
            android:inputType="textMultiLine" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>